--- a/package.json
+++ b/package.json
@@ -7,9 +7,15 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "animate.css": "^4.1.1",
+    "gsap": "^3.8.0",
+    "install": "^0.13.0",
+    "npm": "^8.1.3",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-gsap": "^3.2.1",
     "react-scripts": "4.0.1",
+    "react-scrollmagic": "^2.3.0",
+    "styled-components": "^5.3.3",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
