--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-gsap": "^3.2.1",
-    "react-scripts": "4.0.1",
+    "react-scripts": "^5.0.0",
     "react-scrollmagic": "^2.3.0",
     "styled-components": "^5.3.3",
     "web-vitals": "^0.2.4"
