--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.3.0",
+    "@fortawesome/free-regular-svg-icons": "^6.0.0",
+    "@fortawesome/free-solid-svg-icons": "^6.0.0",
+    "@fortawesome/react-fontawesome": "^0.1.17",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -13,6 +17,8 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-gsap": "^3.2.1",
+    "react-hook-inview": "^4.4.1",
+    "react-icons": "^4.3.1",
     "react-scripts": "^5.0.0",
     "react-scrollmagic": "^2.3.0",
     "styled-components": "^5.3.3",
