--- a/package.json
+++ b/package.json
@@ -17,8 +17,9 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-gsap": "^3.2.1",
-    "react-hook-inview": "^4.4.1",
+    "react-hook-inview": "^4.5.0",
     "react-icons": "^4.3.1",
+    "react-intersection-observer": "^9.2.2",
     "react-scripts": "^5.0.0",
     "react-scrollmagic": "^2.3.0",
     "styled-components": "^5.3.3",
